--- a/hugo.toml
+++ b/hugo.toml
@@ -7,10 +7,10 @@ theme = 'quint'
 summaryLength = 20                  # Number of characters in your card summaries
 
 [pagination]
-pagerSize = 10                        # Number of posts to show on a list page
+pagerSize = 40                        # Number of posts to show on a list page
 
 [params]
-#css = ["css/custom.css"]            # Your custom CSS overrides, stored in yoursite/static/
+css = ["css/custom.css"]            # Your custom CSS overrides, stored in yoursite/static/
 numImages = 10                      # Number of random images to choose from for banners (in themes/quint/static/images)
 useToc = true                      # Set to true to show a Table of Contents on multi-heading posts
 
