--- a/.github/workflows/publier.yml
+++ b/.github/workflows/publier.yml
@@ -33,7 +33,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.128.0
+      # matching what I use locally on debian sid
+      HUGO_VERSION: 0.152.2
     steps:
       - name: Install Hugo CLI
         run: |
