ajuster l'URL de base
maintenant que je sais c'est quoi.

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://recettes.lelutin.ca/'
+baseURL = 'https://lelutin.github.io/recettes'
 languageCode = 'fr-ca'
 title = 'Recettes'
 theme = 'quint'
